minor style fix for img card spacing

--- a/src/app/components/ReordableList/styles.scss
+++ b/src/app/components/ReordableList/styles.scss
@@ -1,6 +1,8 @@
 .image-card {
   position: relative;
-  margin: 4px;
+  margin: 8px;
+  margin-top: 0px;
+  margin-left: 0px;
   background: rgb(239 239 239) !important;
 
   button {
